--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -10,6 +10,10 @@
   top: 0;
   left: 0;
   box-shadow:
-    rgba(0, 0, 0, 0.12) 0px 2px 4px,
-    rgba(0, 0, 0, 0.04) 0px 0px 6px;
+    rgb(0 0 0 / 12%) 0 2px 4px,
+    rgb(0 0 0 / 4%) 0 0 6px;
+  background-color: #409eff;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 600;
 }
