--- a/src/views/Login/index.module.scss
+++ b/src/views/Login/index.module.scss
@@ -1,4 +1,4 @@
-$defaule-color: #33A9FF;
+$defaule-color: #33a9ff;
 $focus-color: rgb(72 125 241);
 
 .loginWrapper {
@@ -6,16 +6,30 @@ $focus-color: rgb(72 125 241);
   height: 100vh;
   position: relative;
 
+  .loginHeader {
+    height: 50px;
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    padding: 0 20px;
+    background: linear-gradient(
+      18deg,
+      rgb(51 169 255 / 5%) 0%,
+      rgb(72 241 164 / 5%) 100%,
+      rgb(9 9 121 / 20%) 10%
+    );
+  }
+
   .bgWraper {
     height: 840px;
-    background: url('../../assets/image/login-bg.png') no-repeat center;
+    background: url('../../assets/image/login-bg.png') no-repeat center top;
     background-size: 100%;
     position: relative;
 
     img {
       position: absolute;
-      left: 260px;
-      top: 138px;
+      left: 200px;
+      top: 65px;
       width: 650px;
       height: 542px;
     }
@@ -23,7 +37,7 @@ $focus-color: rgb(72 125 241);
 
   .loginContent {
     position: absolute;
-    top: 235px;
+    top: 150px;
     right: 230px;
     width: 500px;
     height: 400px;
@@ -34,12 +48,16 @@ $focus-color: rgb(72 125 241);
 
     .loginTitle {
       font-size: 32px;
-      font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
       .title {
-        text-shadow: 0 1px 0 #33A9FF, 0 -1px 0 #33A9FF, 1px 0 0 #33A9FF, -1px 0 0 #33A9FF;
+        text-shadow:
+          0 1px 0 #33a9ff,
+          0 -1px 0 #33a9ff,
+          1px 0 0 #33a9ff,
+          -1px 0 0 #33a9ff;
         color: $focus-color;
-        filter: drop-shadow(10px 10px 2px rgb(51 169 255 / 40%))
+        filter: drop-shadow(10px 10px 2px rgb(51 169 255 / 40%));
       }
     }
 
@@ -56,9 +74,9 @@ $focus-color: rgb(72 125 241);
           left: 0;
           bottom: 0;
           pointer-events: none;
-          transition: all .3s;
+          transition: all 0.3s;
           font-weight: 600;
-          font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+          font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
           font-size: 16px;
           color: $defaule-color;
         }
@@ -76,7 +94,7 @@ $focus-color: rgb(72 125 241);
           border: none;
           border-bottom: 2px solid $defaule-color;
           background: none;
-          transition: all .3s;
+          transition: all 0.3s;
           font-weight: 600;
           height: 35px;
           padding-left: 3px;
@@ -100,7 +118,7 @@ $focus-color: rgb(72 125 241);
           position: absolute;
           bottom: 0;
           left: 0;
-          transition: all .3s;
+          transition: all 0.3s;
           transform: scaleX(0);
         }
 
@@ -117,13 +135,52 @@ $focus-color: rgb(72 125 241);
       background-color: $defaule-color;
       color: #fff;
       font-weight: 600;
-      font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       font-size: 16px;
       border: none;
     }
 
     .loginBtnActive {
       background-color: $focus-color;
+    }
+  }
+
+  .loginFooter {
+    width: 100%;
+    height: 140px;
+    margin-top: -57px;
+    background-color: #1c1c1e;
+    box-sizing: border-box;
+    padding: 36px;
+
+    .footerLeft {
+      display: flex;
+      flex-direction: column;
+      padding-left: 270px;
+
+      .leftImage {
+        display: flex;
+        align-items: center;
+
+        img {
+          width: 40px;
+        }
+
+        span {
+          padding-left: 10px;
+          font-size: 16px;
+          font-weight: 600;
+          color: rgb(93 181 249);
+          font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+      }
+
+      .leftText {
+        padding-top: 16px;
+        padding-left: 5px;
+        font-size: 14px;
+        // color: #fff;
+      }
     }
   }
 }
